# coso-del-break

src/: .gitignore  Breakdown.py  CHANGELOG.md  Makefile  README.md  buscador_adapter.py  condicion.py  errores.py  google_oauth.py  gui.py  main.py  mostrador_de_condiciones.py  mostrador_de_mails.py  pyproject.toml  system_facade.py  ui_theme.py  ventana_de_login.py
src/breakdowns/: asd.xlsx  break.xlsx  break2.xlsx  herkules_IV_Breakdown.xlsx
src/breakingdown/: __init__.py  app.py
src/breakingdown.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tests/: test_breakdown.py  test_buscador_adapter.py  test_gui.py  test_mostrador_de_mails.py  test_system_facade.py
tests/: date_mock.py  mail_mock.py  test_breakdown.py  test_buscador.py  test_facade.py
tests/breakdowns/: UnnamedBreakdown.xlsx
